# K8sSecDaP-BaocaoTN2

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile.pipeline  Makefile  README.md
collector/: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  build.sh
collector/.github/workflows/: build-collector.yml
collector/src/kern/: tcp_connect.bpf.c
collector/src/user/: collector.cpp
config/: pipeline.yaml  portscan.yaml
deploy/: .gitignore  README.md
deploy/cni/calico/: RUNBOOK.md  calico-custom.yaml  install-calico.sh
deploy/control-plane/: README.md  bind-0.0.0.0.patch.sh
deploy/platform/: README.md
deploy/platform/argocd/: app-of-apps.yaml
deploy/platform/cloudflared/: config.example.yaml  deployment.yaml
deploy/platform/dns/: coredns-local.yaml
deploy/platform/helmfile/: helmfile-bootstrap.yaml
deploy/platform/observability/: README.md
docs/phase1-problem-formalization/: 01-stream-frequency-estimation.md  02-dynamic-graph-scc.md  03-k-hop-reachability.md  04-longest-prefix-match.md
docs/phase2-solution-comparison/: 01-cms-vs-alternatives.md  02-tarjan-vs-alternatives.md  03-bfs-vs-alternatives.md  04-lpm-trie-vs-alternatives.md
docs/phase4-real-world-context/: ebpf-theory.md  k8s-network-security.md  zero-trust-mapping.md
docs/phase5-deployment/: k8s-deployment-guide.md
docs/phase6-soc/: quickstart.md
infra/: .gitignore  BAOCAO-TIENDO-CALICO.md  README.md
infra/ansible/: Makefile  README.md  ansible.cfg
infra/ansible/inventory/: hosts.yml
infra/ansible/playbooks/: master.yml  reset.yml  site.yml  worker.yml
infra/bootstrap/: bootstrap.env copy.example  register-node.sh  sync-inventory.sh
output/appendix/: portscan_demo_stdout.txt  portscan_pipeline_help.txt  trace_algorithms_cms.txt  trace_algorithms_compare.txt  trace_algorithms_help.txt  trace_algorithms_misra.txt
output/bench/: bench_raw.json  error_rate.csv  throughput.csv
output/portscan/: alerts.json  comparison.csv  sample_stream.jsonl  trace_cms.txt  trace_hashmap.txt  trace_mg.txt
pipeline/: .gitignore  CMakeLists.txt  README.md
pipeline/libdsa/: CMakeLists.txt
pipeline/libdsa/benchmarks/: CMakeLists.txt  bench_frequency.cpp  bench_lpm.cpp  bench_reachability.cpp  bench_scc.cpp
pipeline/libdsa/include/dsa/: common.h  registry.h
pipeline/libdsa/include/dsa/frequency/: count_min_sketch.h  estimator.h  hash_map_exact.h  heavy_hitters.h
pipeline/libdsa/include/dsa/graph/: bfs.h  dijkstra.h  directed_graph.h  kosaraju.h  reachability.h  scc_detector.h  tarjan.h
pipeline/libdsa/include/dsa/soc/: alert.h  alert_handler.h  alert_handler_factory.h
pipeline/libdsa/include/dsa/trie/: ip_classifier.h  lpm_trie.h
pipeline/libdsa/src/: registry.cpp
pipeline/libdsa/src/frequency/: count_min_sketch.cpp  hash_map_exact.cpp  heavy_hitters.cpp
pipeline/libdsa/src/graph/: bfs.cpp  dijkstra.cpp  directed_graph.cpp  kosaraju.cpp  tarjan.cpp
pipeline/libdsa/src/soc/: alert.cpp  alert_handler_chain.cpp  file_alert_handler.cpp  nats_alert_handler.cpp  register_handlers.cpp  stdout_alert_handler.cpp
pipeline/libdsa/src/trie/: lpm_trie.cpp
pipeline/libdsa/tests/: CMakeLists.txt  test_bfs.cpp  test_count_min_sketch.cpp  test_dijkstra.cpp  test_directed_graph.cpp  test_hash_map_exact.cpp  test_heavy_hitters.cpp  test_kosaraju.cpp  test_lpm_trie.cpp  test_registry.cpp  test_soc.cpp  test_tarjan.cpp
pipeline/pipeline/: CMakeLists.txt
pipeline/pipeline/include/: config_loader.h
pipeline/pipeline/src/: config_loader.cpp  engine.cpp
report/: .gitignore  README.md  report-compile.sh
report/shared/: abbreviations.tex  preamble.tex  references.bib
report/shared/chapters-shared/: app-cms-trace.tex  ch-cms-compare.tex  ch-cms-impl.tex  ch-cms-theory.tex
report/shared/figures/: agent-sidecar-flow.tex  arch-c4.tex  arch-microservices.tex  arch-monolith.tex  arch-overview.tex  bfd-functions.tex  bfs-layers.tex  bpf-maps.tex  bpmn-response.tex  cms-structure.tex  comp-aggregator.tex  comp-alert-bridge.tex  comp-collector.tex  comp-console.tex  comp-incident.tex  comp-pipeline.tex  current-gap.tex  deploy-topology.tex  detect-flow.tex  dfd-level0.tex  dfd-level1.tex  dfd-level2.tex  ebpf-exec-model.tex  erd-soc.tex  eval-detection.tex  flow-e2e.tex  flow-netpol.tex  k8s-attack-scenario.tex  kill-chain.tex  kprobe-tcp-stack.tex  latency-percentiles.tex  lpm-trie-example.tex  overhead-ebpf.tex  overhead-load.tex  packet-event-path.tex  platform-stack.tex  portscan-pipeline.tex  re-process.tex  seq-incident.tex  seq-ingestion.tex  (+7 more)
report/stage1/: acknowledgment.tex  cover.tex  introduction.tex  main.bbl-SAVE-ERROR  main.tex
report/stage1/appendices/: app-code.tex  app-trace.tex
report/stage1/chapters/: ch1-problem.tex  ch5-eval.tex
report/stage2/: abbreviations-bc2.tex  acknowledgment.tex  commitment.tex  cover.tex  main.bbl-SAVE-ERROR  main.tex  mo-dau.tex
report/stage2/appendices/: app-cms-code.tex  app-demo.tex  app-ebpf-code.tex  app-sql.tex  app-tarjan-bfs-code.tex  app-web-console-code.tex
scripts/: attack_scenarios.sh  demo-scripts.sh  generate_portscan_stream.py  generate_synthetic_events.py  migrate-flannel-to-calico.sh  plot_bench.py  rollback-calico-to-flannel.sh  run_portscan_demo.sh  tcpdump_to_events.py  test-networkpolicy.sh
soc/: .gitignore  HELM-MIGRATION.md  README.md
soc/data/: 15-minio.yaml  20-postgres-backup-cronjob.yaml  25-weekly-report-cronjob.yaml  30-retention-cronjob.yaml
soc/manifests/: 00-namespace.yaml  05-rbac-incident-service.yaml  10-nats.yaml  15-mailhog.yaml  23-pipeline-ebpf.yaml  25-aggregator.yaml  26-soc-servicemonitor.yaml  30-alert-viewer.yaml  30-postgres.yaml  35-incident-service.yaml  40-attack-targets.yaml  41-attacker.yaml  45-web-console.yaml  entrypoint-demo.sh  entrypoint-live.sh
soc/scripts/: demo-e2e.sh  latency-report.sh  latency-report.sql  runbook.sh
soc/scripts/eval/: run-eval.sh  (+2 more)
tools/: CMakeLists.txt  trace_algorithms.cpp
tools/portscan-pipeline/: CMakeLists.txt  detector.cpp  detector.h  event.h  main.cpp  parser.cpp  parser.h
visualization/viz/: graph_renderer.py
(+131 files in other folders)
